// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppVersion dispatches the proper actions calculates path correctly on the client too 1`] = `
Object {
  "appSlug": undefined,
  "isPublic": undefined,
  "pagePath": "/such/path",
  "selectedTab": "details",
  "versionId": undefined,
}
`;

exports[`AppVersion dispatches the proper actions dispatches fetchAppVersion and fetchSettings 1`] = `
Object {
  "appSlug": undefined,
  "isPublic": undefined,
  "pagePath": "some/path",
  "selectedTab": "details",
  "versionId": undefined,
}
`;

exports[`AppVersion dispatches the proper actions dispatches fetchAppVersionEvents 1`] = `
Object {
  "appSlug": undefined,
  "isPublic": undefined,
  "pagePath": "some/path",
  "selectedTab": "activity",
  "versionId": undefined,
}
`;

exports[`AppVersion dispatches the proper actions dispatches fetchTestDevices 1`] = `
Object {
  "appSlug": undefined,
  "isPublic": undefined,
  "pagePath": "some/path",
  "selectedTab": "devices",
  "versionId": undefined,
}
`;

exports[`AppVersion renders the activity tab correctly 1`] = `
<Base
  paddingVertical="x10"
>
  <Base
    maxWidth={960}
  >
    <Tabs
      gap="x10"
    >
      <Tab
        active={false}
      >
        <Link
          as="some/path/details"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=details"
        >
          <a>
            Details
          </a>
        </Link>
      </Tab>
      <Tab
        active={false}
      >
        <Link
          as="some/path/devices"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=devices"
        >
          <a>
            Devices
          </a>
        </Link>
      </Tab>
      <Tab
        active={false}
      >
        <Link
          as="some/path/qa"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=qa"
        >
          <a>
            Qa
          </a>
        </Link>
      </Tab>
      <Tab
        active={true}
      >
        <Link
          as="some/path/activity"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=activity"
        >
          <a>
            Activity
          </a>
        </Link>
      </Tab>
    </Tabs>
  </Base>
  <Divider
    color="gray-2"
    direction="horizontal"
    width="0.125rem"
  />
  <Base
    maxWidth={960}
  >
    <Connect(Activity) />
  </Base>
</Base>
`;

exports[`AppVersion renders the details tab correctly 1`] = `
<Base
  paddingVertical="x10"
>
  <Base
    maxWidth={960}
  >
    <Tabs
      gap="x10"
    >
      <Tab
        active={true}
      >
        <Link
          as="some/path/details"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=details"
        >
          <a>
            Details
          </a>
        </Link>
      </Tab>
      <Tab
        active={false}
      >
        <Link
          as="some/path/devices"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=devices"
        >
          <a>
            Devices
          </a>
        </Link>
      </Tab>
      <Tab
        active={false}
      >
        <Link
          as="some/path/qa"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=qa"
        >
          <a>
            Qa
          </a>
        </Link>
      </Tab>
      <Tab
        active={false}
      >
        <Link
          as="some/path/activity"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=activity"
        >
          <a>
            Activity
          </a>
        </Link>
      </Tab>
    </Tabs>
  </Base>
  <Divider
    color="gray-2"
    direction="horizontal"
    width="0.125rem"
  />
  <Base
    maxWidth={960}
  >
    <Connect(AppVersionDetails) />
  </Base>
</Base>
`;

exports[`AppVersion renders the devices tab correctly 1`] = `
<Base
  paddingVertical="x10"
>
  <Base
    maxWidth={960}
  >
    <Tabs
      gap="x10"
    >
      <Tab
        active={false}
      >
        <Link
          as="some/path/details"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=details"
        >
          <a>
            Details
          </a>
        </Link>
      </Tab>
      <Tab
        active={true}
      >
        <Link
          as="some/path/devices"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=devices"
        >
          <a>
            Devices
          </a>
        </Link>
      </Tab>
      <Tab
        active={false}
      >
        <Link
          as="some/path/qa"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=qa"
        >
          <a>
            Qa
          </a>
        </Link>
      </Tab>
      <Tab
        active={false}
      >
        <Link
          as="some/path/activity"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=activity"
        >
          <a>
            Activity
          </a>
        </Link>
      </Tab>
    </Tabs>
  </Base>
  <Divider
    color="gray-2"
    direction="horizontal"
    width="0.125rem"
  />
  <Base
    maxWidth={960}
  >
    <Connect(AppVersionDevices) />
  </Base>
</Base>
`;

exports[`AppVersion renders the other tabs correctly 1`] = `
<Base
  paddingVertical="x10"
>
  <Base
    maxWidth={960}
  >
    <Tabs
      gap="x10"
    >
      <Tab
        active={false}
      >
        <Link
          as="some/path/details"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=details"
        >
          <a>
            Details
          </a>
        </Link>
      </Tab>
      <Tab
        active={false}
      >
        <Link
          as="some/path/devices"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=devices"
        >
          <a>
            Devices
          </a>
        </Link>
      </Tab>
      <Tab
        active={false}
      >
        <Link
          as="some/path/qa"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=qa"
        >
          <a>
            Qa
          </a>
        </Link>
      </Tab>
      <Tab
        active={false}
      >
        <Link
          as="some/path/activity"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=activity"
        >
          <a>
            Activity
          </a>
        </Link>
      </Tab>
    </Tabs>
  </Base>
  <Divider
    color="gray-2"
    direction="horizontal"
    width="0.125rem"
  />
  <Base
    maxWidth={960}
  >
    <h1>
      whateever
    </h1>
  </Base>
</Base>
`;

exports[`AppVersion renders the qa tab correctly 1`] = `
<Base
  paddingVertical="x10"
>
  <Base
    maxWidth={960}
  >
    <Tabs
      gap="x10"
    >
      <Tab
        active={false}
      >
        <Link
          as="some/path/details"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=details"
        >
          <a>
            Details
          </a>
        </Link>
      </Tab>
      <Tab
        active={false}
      >
        <Link
          as="some/path/devices"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=devices"
        >
          <a>
            Devices
          </a>
        </Link>
      </Tab>
      <Tab
        active={true}
      >
        <Link
          as="some/path/qa"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=qa"
        >
          <a>
            Qa
          </a>
        </Link>
      </Tab>
      <Tab
        active={false}
      >
        <Link
          as="some/path/activity"
          href="/version?appSlug=app-slug-123&versionId=123&selectedTab=activity"
        >
          <a>
            Activity
          </a>
        </Link>
      </Tab>
    </Tabs>
  </Base>
  <Divider
    color="gray-2"
    direction="horizontal"
    width="0.125rem"
  />
  <Base
    maxWidth={960}
  >
    <_default />
  </Base>
</Base>
`;
